--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JS-Todo-List</title>
 </head>
 <body>
-    
+    <input type="text" id="inputText"/>
+    <input type="date" id="datePicker">/>
+    <button id="add">Click me</button>
+    <div id="todoDisplay"></div>
 </body>
 <script src="script.js"></script>
 </html>
