Added "delete" functionality

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <input type="text" id="inputText"/>
-    <input type="date" id="datePicker">/>
+    <input type="date" id="datePicker"/>
     <button id="add">Click me</button>
     <div id="todoDisplay"></div>
 </body>
