--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
     <title>JS-Todo-List</title>
 </head>
 <body>
-    <input type="text" id="inputText"/>
-    <input type="date" id="datePicker"/>
-    <button id="add">Click me</button>
-    <div id="todoDisplay"></div>
+    <h1>Todo-List</h1>
+    <div id="mainValues">
+        <div id="enterValues">
+            <input type="text" id="inputText" maxlength="32" placeholder="Todo"/>
+            <input type="text" onfocus="(this.type='date')"  placeholder="Date" id="datePicker"/>
+            <button id="add">Add</button>
+        </div>
+        
+        <div id="todoDisplay"></div>
+    </div>
+    
 </body>
 <script src="script.js"></script>
 </html>
