Removed bugs, added maxValue to input's

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <h1>Todo-List</h1>
     <div id="mainValues">
         <div id="enterValues">
-            <input type="text" id="inputText" maxlength="32" placeholder="Todo"/>
-            <input type="text" onfocus="(this.type='date')"  placeholder="Date" id="datePicker"/>
+            <input type="text" id="inputText" maxlength="24" placeholder="Todo"/>
+            <input type="text" onfocus="(this.type='date')" max="9999-12-31" placeholder="Date" id="datePicker"/>
             <button id="add">Add</button>
         </div>
         
